--- a/funny-face/index.html
+++ b/funny-face/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>
-        3d Animation
+        Funny Face
     </title>
     <link rel="stylesheet" type="text/css"
     href="style2.css">
 </head>
-<body>YO
+<body id="body">
     <div id="div1">
 
     </div>
