--- a/Animated 3d Cube/index.html
+++ b/Animated 3d Cube/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Funny Face
+    <title>3D Cube
     </title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
